--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    
+    
+    <style name="Widget.BottomNavigationView" parent = "Widget.Design.BottomNavigationView">
+        <item name="android:fontFamily">@font/concert_one</item>
+    </style>
 
 </resources>
