--- a/app/src/main/res/layout/activity_rv_query_image_item.xml
+++ b/app/src/main/res/layout/activity_rv_query_image_item.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/flickr_thumbnail_iv"
+            android:id="@+id/flickr_query_thumbnail_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/image_thumbnail"
@@ -21,7 +21,7 @@
             android:transitionName="BackdropTransition" />
 
         <TextView
-            android:id="@+id/image_id"
+            android:id="@+id/query_image_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
